openafs (1.3.87-2) unstable; urgency=low

  * Improve the documentation and scripts for setting up new servers or a
    new cell.  afs-rootvol can now be run from a client configured to use
    dynroot.  afs-newcell generates the server CellServDB directly to work
    around oddities with bos addhost.  Thanks to Fahemm Mitha and Sergio
    Gelato for analysis and patches.  (Closes: #322638)

 --

openafs (1.3.87-1) unstable; urgency=low

  * New upstream version.
    - Fixes build problems with 2.6.12.3 and later.  (Closes: #320099)
  * Add support for ppc64, thanks Andreas Jochens.  (Closes: #322020)
  * Improve the openafs-client init script.
    - Update the default client options based on the cache tuning synopsis
      by Jeffrey Hutzelman, including setting a larger chunksize for all
      default option sets.  (Closes: #303944)
    - Choose the client options based on the cache size by default.
    - Move the code to build the options string to the init script from
      afs.conf so that afs.conf is pure configuration.
    - Add an AFS_PRE_SHUTDOWN hook called before shutting down the client.
    - Provide a shutdown hook, disabled by default, that kills all
      processes with files open in /afs.  Enabling this ensures a more
      reliable clean shutdown and umounting of the cache partition, but
      may not always be what the admin wants.
    - Improve the readability of the output on start.
    - Significantly improve the comments in afs.conf.
    - Remove the code to set -nosettime as it's now the default.
  * Move the openafs-client init script and afs.conf file we use into the
    debian directory rather than patching the upstream version.  We've
    diverged so much that there's no point in continuing to merge changes.
  * Diagnose unsupported architectures earlier and with a clearer error.
  * Suppress error messages from a missing kernel version header since
    they occur normally when doing the regular package build and are just